syntax="proto3";
package video;
option go_package="../video/pb";
import "user.proto";
message FeedRequest{
  int64 latest_time=1;
  int64 user_id=2;
  string token=3;
}
message FeedResponse{
  int32 status_code=1;
  string status_msg=2;
  repeated Video video_list=3;
  int64 next_time=4;
}
message Video{
  int64 id=1;
  user.User author=2;
  string play_url=3;
  string cover_url=4;
  int64 favorite_count=5;
  int64 comment_count=6;
  bool is_favorite=7;
  string title=8;
}
//message User{
//  int64 id=1;
//  string name=2;
//  int64 follow_count=3;
//  int64 follower_count=4;
//  bool is_follow=5;
//}
message PublishActionRequest{
  string token=1;
  bytes data=2;
  string title=3;
  string filename=4;
  int64 user_id=5;
}
message PublishActionResponse{
  int32 status_code=1;
  int32 status_msg=2;
}
message PublishListRequest{
  int64 user_id=1;
  int64 to_user_id=2;
  string token=3;
}
message PublishListResponse{
  int32 status_code=1;
  string status_msg=2;
  repeated Video video_list=3;
}
message GetTotalWorkCountRequest{
  int64 user_id=1;
}
message GetTotalWorkCountResponse{
  int64 count=3;
}
message GetVideoIDListOfUserRequest{
  int64 user_id=1;
}
message GetVideoIDListOfUserResponse{
  repeated int64 video_id_list=1;
}
message InitUserFeedRequest{
  int64 user_id=1;
}
message InitUserFeedResponse{

}
message AuthorFeedPushToNewFollowerRequest{
  int64 author_id=1;
  int64 follower_id=2;
}
message AuthorFeedPushToNewFollowerResponse{

}
service VideoService{
  rpc PublishVideo(PublishActionRequest)returns (PublishActionResponse){}
  rpc GetVideoList(PublishListRequest)returns (PublishListResponse){}
  rpc GetUserFeed(FeedRequest)returns (FeedResponse){}
  rpc GetTotalWorkCount(GetTotalWorkCountRequest)returns (GetTotalWorkCountResponse){}
  rpc GetVideoIDListOfUser(GetVideoIDListOfUserRequest)returns (GetVideoIDListOfUserResponse){}
  rpc InitUserFeed(InitUserFeedRequest)returns (InitUserFeedResponse){}
  rpc AuthorFeedPushToNewFollower(AuthorFeedPushToNewFollowerRequest)returns (AuthorFeedPushToNewFollowerResponse){}
}